# RayTrace

./: .gitignore  CMakeLists.txt  README.md  cmake.bat  image.ppm
RayTrace/source/: CMakeLists.txt  color.cpp  color.h  main.cpp  math.h  ppm.cpp  ppm.h  ray.h  sphere.cpp  world.cpp
RayTracingInOneWeekend/: CMakeLists.txt  exec.bat
RayTracingInOneWeekend/Chapter01/: CMakeLists.txt  chapter01.cpp
RayTracingInOneWeekend/Chapter02/: CMakeLists.txt  chapter02.cpp
RayTracingInOneWeekend/Chapter03/: CMakeLists.txt  chapter03.cpp  vector3.h
RayTracingInOneWeekend/Chapter04/: CMakeLists.txt  chapter04.cpp  ray.h  vector3.cpp
RayTracingInOneWeekend/Chapter05/: CMakeLists.txt  chapter05.cpp  hitable.h  world.h
RayTracingInOneWeekend/Chapter06/: CMakeLists.txt  camera.h  chapter06.cpp  sphere.cpp  sphere.h
source/: CMakeLists.txt  image.cpp  image.h  main.cpp  object.cpp  object.h  ppm.cpp  ray.cpp  sphere.h  vector3.cpp  vector3.h  world.h
